@@ -1,3 +1,8 @@
+2005-11-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/textdoccol.R: We now can read in a whole XML file with several
+	news items.
+
 2005-11-05  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R: Set up an S4 class for a collection of text
